# xarray-multiscale

./: .gitignore  .pre-commit-config.yaml  404.html  LICENSE  README.md  README.rst  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.github/workflows/: tests.yml
api/chunks/: index.html
api/multiscale/: index.html
api/reducers/: index.html
api/util/: index.html
docs/: conf.py  index.md  index.rst  modules.rst  xarray_multiscale.rst
docs/api/: chunks.md  multiscale.md  reducers.md  util.md
src/xarray_multiscale/: __about__.py  __init__.py  chunks.py  group.py  multiscale.py  packed_downscale.py  reducers.py  storage.py  util.py
src/xarray_multiscale.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/xarray_multiscale/metadata/: cosem-ome.py  cosem_ome.py  neuroglancer.py  util.py
tests/: test_chunks.py  test_doc.py  test_docs.py  test_metadata.py  test_multiscale.py  test_reducers.py  test_util.py  test_xarray_multiscale.py
