[tool.poetry]
name = "xarray-multiscale"
version = "2.0.0"
description = ""
authors = ["Davis Vann Bennett <davis.v.bennett@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
xarray = ">=2022.03.0"
scipy = ">=1.5.4"
numpy = ">=1.19.4"
dask = ">=2020.12.0"

[tool.poetry.group.dev.dependencies]
Sphinx = "^4.4.0"
sphinx-rtd-theme = "^1.0.0"
numpydoc = "^1.2"
sphinx-issues = "^3.0.1"
pytest-cov = "^3.0.0"
pytest = "^7.1.2"
mypy = "^0.971"
pre-commit = "^3.0.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[mypy]
plugins = "numpy.typing.mypy_plugin"